--- a/index.html
+++ b/index.html
@@ -1,13 +1,127 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Naturaleza y sus maravillas</title>
+    <style>
+        /* Estilos generales */
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background: url('https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0') no-repeat center center/cover;
+            height: 50vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: white;
+        }
+        header h1 {
+            font-size: 3rem;
+        }
+        nav {
+            background-color: #333;
+            padding: 1em;
+            text-align: center;
+        }
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-size: 1.2rem;
+        }
+        nav a:hover {
+            color: #f4f4f4;
+        }
+        .content {
+            padding: 20px;
+        }
+        h2 {
+            text-align: center;
+            color: #4CAF50;
+        }
+        .grid {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .card {
+            background-color: white;
+            border-radius: 5px;
+            margin: 15px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 300px;
+            text-align: center;
+        }
+        .card img {
+            width: 100%;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+        .card h3 {
+            margin: 10px 0;
+        }
+        .card p {
+            padding: 0 10px;
+            color: #666;
+        }
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <h1>hola</h1>
-    <p>visca barc</p>
-    <p>y visca cataluña</p>
+
+    <!-- Header con imagen -->
+    <header>
+        <h1>La Naturaleza y sus maravillas</h1>
+    </header>
+
+    <!-- Barra de navegación -->
+    <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Artículos</a>
+        <a href="#">Galería</a>
+        <a href="#">Contacto</a>
+    </nav>
+
+    <!-- Sección de contenido -->
+    <section class="content">
+        <h2>Explora las maravillas de la naturaleza</h2>
+        <div class="grid">
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1506748686214-e9df14d4d9d0" alt="Montañas">
+                <h3>Montañas</h3>
+                <p>Las montañas son uno de los grandes tesoros de la naturaleza, imponentes y majestuosas.</p>
+            </div>
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1465311440651-7b0b580dc745" alt="Bosques">
+                <h3>Bosques</h3>
+                <p>Los bosques son el hogar de miles de especies y contribuyen al equilibrio del ecosistema.</p>
+            </div>
+            <div class="card">
+                <img src="https://images.unsplash.com/photo-1516905205900-1bb13f74f5b4" alt="Océanos">
+                <h3>Océanos</h3>
+                <p>Los océanos cubren más del 70% de la superficie del planeta y son fundamentales para la vida en la Tierra.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer>
+        <p>&copy; 2024 Naturaleza y sus maravillas. Todos los derechos reservados.</p>
+    </footer>
+
 </body>
 </html>
